# dmrg

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment-ci.yml  heisenberg_model_exact.py  pyproject.toml  setup.py  vlxdmrg_env.yml
.github/workflows/: ci.yml
dmrg/: read_write.py
dmrg/python/: mpo.py  mps.py
docs/: DMRG_enes_631G_h2.npy  FCI_enes_631G_h2.npy  HF_enes_631G_h2.npy  README.md  h2-example.ipynb  hubbard_5_site_bonds.npy  hubbard_5_site_energies.npy  hubbard_ground_state.ipynb  install.md  longer_example.ipynb  myst.yml
src/: __init__.py
src/dmrg/: __init__.py  _parity.cpp  hamiltonian.py  integrals.py  mpo.py  mps.py  operators.py  settings.py  sweep.py
src/io/: __init__.py  read_write.py
tests/: test_boundary.py  test_canonical_form.py  test_eigsolver.py  test_electronic_ham.py  test_hamiltonian.py  test_hubbard.py  test_jordanwigner_dressing.py  test_mps.py  test_operator.py
